# persistent-crud

./: README.md  persistent-crud.cabal
src/Persistent/: CRUD.hs
test/Persistent/: CRUDSpec.hs
