name:                persistent-crud
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/stackbuilders/persistent-crud#readme
license:             BSD3
license-file:        LICENSE
author:              Stack Builders
maintainer:          info@stackbuilders.com
copyright:           2016 Stack Builders
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Persistent.CRUD
  build-depends:       base >= 4.7 && < 5
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time
                     , transformers
  default-language:    Haskell2010

test-suite persistent-crud-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , persistent
                     , persistent-crud
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stackbuilders/persistent-crud
